bin/testsuite/tests/compiler/src/errors/compiler3790.swg
#global testerror "Err0004"

namespace A
{
    func toto() {}
}

private
{
    func toto() {}
}

#test
{
    using A //, B
    var a = &toto
}
